--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "^1.0.36"
 futures = "^0.1.27"
 wasm-bindgen-futures = "^0.3.20"
 enclose = "1.1.6"
+gloo-timers = { git = "https://github.com/rustwasm/gloo", features = ["futures"] }
 
 # Markdown conversion
 pulldown-cmark = "^0.2.0"
@@ -40,6 +41,7 @@ features = [
     "CustomEvent",
     "CustomEventInit",
     "Document",
+    "DomException",
     "Element",
     "Event",
     "EventTarget",
