--- a/examples/orders/Cargo.toml
+++ b/examples/orders/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 seed = {path = "../../"}
-gloo-timers = {path = "vendor/gloo_timers", features = ["futures"]}
+gloo-timers = { git = "https://github.com/rustwasm/gloo", features = ["futures"] }
 wasm-bindgen = "0.2.42"
 web-sys = "^0.3.19"
 futures = "^0.1.20"
