--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ features = [
 
 [workspace]
 members = [
+    "examples/89_similar_elements_bug_demo",
     "examples/counter",
     # "examples/homepage",   # isn't Rust project
     # "examples/mathjax",   # isn't Rust project
