did_mount experiment

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ features = [
 members = [
     "examples/animation_frame",
     "examples/counter",
+    "examples/did_mount",
     # "examples/homepage",   # isn't Rust project
     "examples/mathjax",
     "examples/orders",
