--- a/examples/did_mount/Cargo.toml
+++ b/examples/did_mount/Cargo.toml
@@ -10,3 +10,9 @@ crate-type = ["cdylib"]
 [dependencies]
 seed = {path = "../../"}
 wasm-bindgen = "0.2.45"
+
+[dependencies.web-sys]
+version = "0.3.22"
+features = [
+    "HtmlInputElement",
+]
