--- a/examples/orders/Cargo.toml
+++ b/examples/orders/Cargo.toml
@@ -9,6 +9,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 seed = {path = "../../"}
-gloo-timers = {version = "^0.1.0", features = ["futures"]}
 wasm-bindgen = "0.2.45"
-futures = "^0.1.27"
+gloo-timers = { version = "0.2.0", features = ["futures"] }
