feat(fetch): Use future.map to simplify `fetch` example

--- a/examples/fetch/Cargo.toml
+++ b/examples/fetch/Cargo.toml
@@ -11,3 +11,4 @@ crate-type = ["cdylib"]
 seed = {path = "../../"}
 wasm-bindgen = "0.2.55"
 serde = { version = "^1.0.103", features = ["derive"] }
+futures = "0.3.4"
