--- a/examples/markdown/Cargo.toml
+++ b/examples/markdown/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib"]
 
+[build-dependencies]
+pulldown-cmark = "0.7.0"
+
 [dependencies]
 seed = {path = "../../"}
 wasm-bindgen = "0.2.55"
