--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,13 @@ enclose = "1.1.8"
 gloo-timers = { version = "0.2.1", features = ["futures"] }
 gloo-file = { version = "0.1.0", features = ["futures"] }
 indexmap = "1.3.2"
-js-sys = "0.3.37"
-pulldown-cmark = "0.7.0"
+js-sys = "0.3.39"
+pulldown-cmark = "0.7.1"
+rand = { version = "0.7.3", features = ["wasm-bindgen", "small_rng"] }
 serde = { version = "1.0.106", features = ['derive'] }
 serde_json = "1.0.51"
-wasm-bindgen = {version = "0.2.60", features = ["serde-serialize"]}
-wasm-bindgen-futures = "0.4.10"
+wasm-bindgen = {version = "0.2.62", features = ["serde-serialize"]}
+wasm-bindgen-futures = "0.4.12"
 # @TODO: remove once we can use entities without `Debug` in `log!` and `error!` on `stable` Rust.
 # https://github.com/Centril/rfcs/blob/rfc/quick-debug-macro/text/0000-quick-debug-macro.md#types-which-are-not-debug
 dbg = "1.0.4"
@@ -40,7 +41,7 @@ futures = "0.3.4"
 uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
 
 [dependencies.web-sys]
-version = "0.3.37"
+version = "0.3.39"
 features = [
     "AbortController",
     "AbortSignal",
