--- a/examples/drop_zone/Cargo.toml
+++ b/examples/drop_zone/Cargo.toml
@@ -10,3 +10,4 @@ crate-type = ["cdylib"]
 [dependencies]
 seed = {path = "../../"}
 wasm-bindgen-futures = "0.4.13"
+gloo-file = { version = "0.1.0", features = ["futures"] }
