--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,7 @@ members = [
     "examples/pages_hash_routing",
     "examples/pages_keep_state",
     # "examples/server_integration",   # has own workspace
+    "examples/service_worker",
     "examples/subscribe",
     "examples/tea_component",
     "examples/todomvc",
