--- a/examples/service_worker/Cargo.toml
+++ b/examples/service_worker/Cargo.toml
@@ -24,6 +24,7 @@ features = [
   "EventTarget",
   "Navigator",
   "Notification",
+  "NotificationPermission",
   "ServiceWorker",
   "ServiceWorkerContainer",
   "ServiceWorkerRegistration",
