--- a/examples/service_worker/Cargo.toml
+++ b/examples/service_worker/Cargo.toml
@@ -11,6 +11,7 @@ license = "MIT"
 crate-type = ["cdylib"]
 
 [dependencies]
+futures = "0.3"
 seed = {path = "../../"}
 serde = "1.0"
 serde_json = "1.0"
@@ -19,6 +20,7 @@ wasm-bindgen-futures = "0.4"
 [dependencies.web-sys]
 version = "0.3.44"
 features = [
+  "CacheStorage",
   "Notification",
   "NotificationPermission",
   "ServiceWorker",
